force-app/main/default/objects/Report_Finder_Item__c/Report_Finder_Item__c.object-meta.xml
<CustomObject>
    <description>These records hold details about reports, including filters, tags, and types.</description>
    <label>Report Finder Item</label>
    <nameField>
        <displayFormat>RFI-{0}</displayFormat>
        <label>Report Finder Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Finder Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>