force-app/main/default/objects/Report_Finder_Item__c/fields/Access_URL__c.field-meta.xml
<CustomField>
    <fullName>Access_URL__c</fullName>
    <label>Access URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>