force-app/main/default/objects/Report_Finder_Item__c/fields/Advancement_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Report_Name__c</fullName>
    <label>Advancement Report Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>