force-app/main/default/objects/Report_Finder_Item__c/fields/Item_Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>Item_Usage_Count__c</fullName>
    <label>Item Usage Count</label>
    <summaryForeignKey>Report_Finder_Item_Usage__c.Report_Finder_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>