force-app/main/default/objects/Report_Finder_Item__c/fields/Items_Bookmarked_Count__c.field-meta.xml
<CustomField>
    <fullName>Items_Bookmarked_Count__c</fullName>
    <label>Items Bookmarked Count</label>
    <summaryForeignKey>Report_Finder_User_Bookmark__c.Report_Finder_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>