force-app/main/default/objects/Report_Finder_Item__c/fields/Publish_Status__c.field-meta.xml
<CustomField>
    <fullName>Publish_Status__c</fullName>
    <label>Publish Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Not Published</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
                <isActive>false</isActive>
                <label>Beta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>