force-app/main/default/objects/Report_Finder_Item__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <label>Short Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>