force-app/main/default/objects/Report_Finder_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Access_URL__c</columns>
    <columns>Thumbnail_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>